fixed preloader alignment bug

--- a/stylesheets/state.styl
+++ b/stylesheets/state.styl
@@ -31,25 +31,27 @@
 
     .computer
       color $color-red
-      display inline
+      // display inline
       position relative
       font-size 14px
       text-align center
       text-transform uppercase
       letter-spacing 3px
 
+      &:after
+        height 49px
+        margin-left 50%
+        width 1px
+        border-left 1px dotted $color-beige
+        absolute top 31px left -2px
+        content ' '
+        display block
+
       &:before
         color #000
         display block
         font-size 136px
         margin-bottom 20px
-
-      &:after
-        height 49px
-        width 1px
-        border-left 1px dotted $color-beige
-        absolute top 31px left 48px
-        content ''
 
 
   &.state.game-instructions,
